@@ -1,5 +1,8 @@
 #scene.camera.type = stereo
-#scene.camera.type = environment
+##
+scene.camera.type = environment
+scene.camera.environment.degrees = 180
+##
 #scene.camera.type = orthographic
 scene.camera.lookat.orig = 0.5 -1.4 1.7
 scene.camera.lookat.target = 0.0 0.0 0.4
